[gd_scene load_steps=5 format=2]

[ext_resource path="res://arts/ship1.png" type="Texture" id=1]
[ext_resource path="res://Ship.gd" type="Script" id=2]
[ext_resource path="res://Laser.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 37.899
height = 19.6299

[node name="Area2D" type="Area2D"]
scale = Vector2( 0.7, 0.7 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )
laser_scene = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="collision" type="CollisionShape2D" parent="."]
rotation = 1.63886
shape = SubResource( 1 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
